Prevent zoom on mobile via css

--- a/src/index.css
+++ b/src/index.css
@@ -275,3 +275,13 @@
     background: red;
   }
 }
+
+@layer utilities {
+  input[type="text"],
+  input[type="number"],
+  input[type="email"],
+  input[type="tel"],
+  input[type="password"] {
+    font-size: 16px;
+  }
+}
